--- a/.github/workflows/module1-build.yml
+++ b/.github/workflows/module1-build.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubicloud-standard-4
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.0.0
       - uses: actions/setup-java@v4
