--- a/.github/workflows/module2-build.yml
+++ b/.github/workflows/module2-build.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - '*.kts'
       - 'module2/**'
-      - 'core/**'
+      - 'libraries/core/**'
       - 'module1/**'
       - '.github/workflows/module2-build.yml'
 jobs:
