--- a/.github/workflows/auth-build.yml
+++ b/.github/workflows/auth-build.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - '*.kts'
       - 'services/auth/**'
+      - 'libraries/core/**'
       - '.github/workflows/auth-build.yml'
 jobs:
   build:
