--- a/.github/workflows/api-build.yml
+++ b/.github/workflows/api-build.yml
@@ -1,4 +1,4 @@
-name: module1-build
+name: api-build
 on:
   workflow_dispatch: 
   push:
@@ -6,9 +6,9 @@ on:
       - main
     paths:
       - '*.kts'
-      - 'module1/**'
+      - 'services/api/**'
       - 'libraries/core/**'
-      - '.github/workflows/module1-build.yml'
+      - '.github/workflows/api-build.yml'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,4 +19,4 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
-      - run: ./gradlew :module1:check
+      - run: ./gradlew :services:api:check
