--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,11 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
-      - name: Setup JDK
-        uses: actions/setup-java@v4.5.0
+      - uses: actions/setup-java@v4.5.0
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
-      - name: Gradle check
-        run: ./gradlew check
+      - run: ./gradlew check
