--- a/.github/workflows/core-build.yml
+++ b/.github/workflows/core-build.yml
@@ -19,3 +19,5 @@ jobs:
           java-version: '21'
           cache: 'gradle'
       - run: ./gradlew :libraries:core:check
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
