--- a/.github/workflows/e2e-build.yml
+++ b/.github/workflows/e2e-build.yml
@@ -22,3 +22,5 @@ jobs:
           java-version: '21'
           cache: 'gradle'
       - run: ./gradlew :tests:e2e:check
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
