added slack dependency

--- a/.github/workflows/e2e-build.yml
+++ b/.github/workflows/e2e-build.yml
@@ -8,6 +8,7 @@ on:
       - '*.kts'
       - 'tests/e2e/**'
       - 'libraries/core/**'
+      - 'libraries/slack/**'
       - 'services/api/**'
       - 'services/filestore/**'
       - '.github/workflows/e2e-build.yml'
